# guppylang

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .typos.toml  AGENTS.md  CITATION.cff  Cargo.toml  DEVELOPMENT.md  README.md  __main__.gv  cliff.toml  custom_modifier_playground.ipynb  enum_demo.ipynb  enum_syntax.md  enum_syntax.txt  justfile  list_of_all.md  match_error_tests.ipynb  match_op_demo.ipynb  modifier_playground.ipynb  out.txt  playground.ipynb  pyproject.toml  release-please-config.json  ruff.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: benchmarks_base.yml  benchmarks_pr.yml  check_guppylang_version.py  docs.yml  pr-title.yml  pull-request.yaml  python-wheels.yml  release-branch-cut.yml  release-checks.yml  release-major-guard.yml  release-please.yml  release-pr-changelog-preview.yml  release-pr.yml  release-publish.yml  release-version-guard.yml  semver-checks.yml
docs/: build.sh
docs/library-docs/: conf.py  index.md  index.rst  overview.md  proposals.md
examples/: adaptive-qpe.ipynb  canonical-qpe.ipynb  deferred_measurement.ipynb  ghz_and_graph.ipynb  postselect.ipynb  qaoa_max-cut_example.ipynb  qaoa_maxcut_example.ipynb  random_numbers.ipynb  repeat-until-success.ipynb  state_results.ipynb  swap_test.ipynb  t_factory.ipynb
guppylang/: CHANGELOG.md  pyproject.toml
guppylang-internals/: CHANGELOG.md  pyproject.toml
guppylang/src/guppylang/: __init__.py  classmethodtest.py  decorator.py  defs.py  experimental.py  library.py  optimizer.py
guppylang/src/guppylang/emulator/: __init__.py  _args.py  builder.py  instance.py  result.py  state.py
guppylang/src/guppylang/std/: angles.py  array.py  bool.py  builtins.py  debug.py  effects.py  either.py  err.py  futures.py  iter.py  lang.py  list.py  mem.py  modifier.py  num.py  option.py  platform.py  quantum_functional.py  random.py  unsupported.py
guppylang/src/guppylang/std/collections/: __init__.py  btree_map.py  priority_queue.py  queue.py  stack.py
guppylang/src/guppylang/std/qsystem/: __init__.py  _common.py  _functional_base.py  functional.py  helios.py  random.py  sol.py  utils.py  wasm.py
guppylang/src/guppylang/std/qsystem/helios/: __init__.py  config.py  functional.py
guppylang/src/guppylang/std/qsystem/sol/: __init__.py  functional.py
guppylang/src/guppylang/std/quantum/: __init__.py  functional.py
miette-py/: pyproject.toml
scripts/release/: compute_versions.py  extract_changelog.py  render_pr_body.py  update_changelog.py
test_files/modifier_examples/: README.md  assign_in_dagger.hugr  assign_in_dagger.py  call1_in_ctrl.py  call2_in_ctrl.py  call_in_dagger.py  classical_array_op.py  classical_function1.py  classical_function2.py  classical_function3.py  complex_modifier_stress.py  ctrl_array_controller.py  ctrl_on_cfg.py  double_modifier.py  even_dagger.py  gate_in_ctrl.py  higher_order_classical.py  higher_order_function_w_arrays.py  higher_order_function_w_loops.py  higher_order_recursive.py  justfile  modify_array.py  multiple_dagger.py  multiple_functions_in_ctrl_dagger.py  multiple_functions_in_dagger.py  multiple_gates1_in_ctrl.py  multiple_gates1_in_dagger.py  multiple_gates2_in_ctrl.py  multiple_gates2_in_dagger.py  multiple_gates3_in_dagger.py  nested_ctrl_dagger1.py  nested_multiple_ctrl1.py  subscript_as_controller.py  subscript_in_ctrl.py  subscript_in_dagger.py  subscript_in_dagger_ctrl.py  swap_in_dagger.py
test_files/run_modifier_examples/: README.md  apply_passes.py  hugr_results.txt  justfile  run_examples.py
tests/: bencher.py  conftest.py  demo.ipynb  test_ast_nodes.py  test_debug_info.py  test_function_header_span.py  test_guppy_decoupled.py  test_optimization.py  test_pytest_hang.py  test_removed.py  test_type_printing.py  test_version_metadata.py  util.py
tests/benchmarks/: test_big_array.py  test_ctrl_flow.py  test_mem_usage.py  test_prelude.py  test_queue_push_pop.py  test_tracing.py
tests/definition/: test_metadata.py
tests/diagnostics/: test_diagnostics_rendering.py  test_miette_rendering.py  test_warning_reporting.py
tests/emulator/: test_args.py  test_builder.py  test_instance.py
tests/error/: test_alias_errors.py  test_array_errors.py  test_comprehension_errors.py  test_decorator_errors.py  test_effects_errors.py  test_enum_errors.py  test_errors_on_usage.py  test_experimental_errors.py  test_linear_errors.py  test_match_errors.py  test_metadata_errors.py  test_misc_errors.py  test_modifier_errors.py  test_nested_errors.py  test_output_errors.py  test_overload_errors.py  test_poly_errors.py  test_self_errors.py  test_tensor_errors.py  test_tracing_errors.py  test_type_errors.py  util.py
tests/integration/: conftest.py  test_arithmetic.py  test_array.py  test_array_effects.py  test_array_index.py  test_array_swap.py  test_basic.py  test_bytecast.py  test_call.py  test_callable.py  test_callable_py312.py  test_callgraph.py  test_comprehension.py  test_comptime_args.py  test_comptime_effects.py  test_comptime_expr.py  test_comptime_expr_py312.py  test_constants.py  test_drop_insertion.py  test_effects.py  test_emulator.py  test_emulator_args.py  test_enum.py  test_enums.py  test_examples.py  test_exported_hugrs.py  test_extensions.py  test_extern.py  test_for.py  test_frozenarray.py  test_gpu.py  test_higher_order.py  test_hugr_name.py  test_imports.py  test_inout.py  test_is_decl.py  test_library.py  test_linear.py  test_link_name.py  (+39 more)
(+1120 files in other folders)
