[dependency-groups]
dev = [
  { include-group = "examples" },
  { include-group = "lint" },
  { include-group = "test" },
]
docs = ["furo>=2024.8.6", "sphinx >=7.2.6,<9"]
examples = ["matplotlib>=3.10.9", "networkx>=2.6,<4"]
lint = ["mypy~=1.20.2", "pre-commit>=4.6.0,<5", "ruff~=0.15.12"]
test = [
  "ipykernel>=6.29.5,<8",
  "miette-py",
  "pytest>=8.4.2,<10",
  "pytest-benchmark>=5.1.0",
  "pytest-codspeed>=4.5.0",
  "pytest-cov>=5.0.0,<8",
  "pytest-isolate>=0.0.13",
  "pytest-notebook >=0.10.0,<0.11",
  "pytest-snapshot >=0.9.0,<1",
  "pytest-xdist>=3.8.0",
]

[tool.uv]
[tool.uv.workspace]
members = ["guppylang", "guppylang-internals", "miette-py"]

[tool.uv.sources]
guppylang = { workspace = true }
guppylang-internals = { workspace = true }
miette-py = { workspace = true }
# Uncomment these to test the latest dependency version during development
#  hugr = { git = "https://github.com/quantinuum/hugr", subdirectory = "hugr-py", rev = "a4da8ef" }
tket = {git = "https://github.com/quantinuum/tket2", subdirectory = "tket-py", rev = "c2739b3"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["miette_py"]

[tool.coverage.report]
exclude_also = [
  # Don't complain about missing coverage on typing imports
  "if TYPE_CHECKING:",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  "raise InternalGuppyError",
  # Don't complain about abstract methods, they aren't run:
  "@abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--benchmark-disable -m 'not test_exported_hugrs'"  # benchmarks run explicitly with `just bench`
markers = "test_exported_hugrs"
filterwarnings = [
  "ignore::DeprecationWarning",  # TODO remove after removing guppy.compile()
  "ignore::SyntaxWarning",  # Python 3.14 complains about guppy tuple callables
]
