[project]
name = "guppylang"
version = "1.0.0-a8"
requires-python = ">=3.12,<4"
description = "Pythonic quantum-classical programming language"
license = { file = "LICENCE" }
readme = "../README.md"
authors = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "guppylang-internals==1.0.0-a8",
    "numpy~=2.5",
    "selene-hugr-qis-compiler~=0.4.2",
    "selene-sim~=0.3.0a2",
    "tqdm>=4.69.0",
    "pytket>=2.7.0",
    "types-tqdm>=4.67.0.20250809",
]

[project.urls]
homepage = "https://github.com/quantinuum/guppylang"
repository = "https://github.com/quantinuum/guppylang"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
